--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,10 +12,10 @@
       </svg>
     </label>
     <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo"><a [routerLink]="['/inicio']" routerLinkActive="router-link-active">Dev<b>Design</b><sup>ec</sup></a></h1>
+        <h1 class="rk-logo"><a [routerLink]="['/inicio']" routerLinkActive="router-link-active">{{infoPagina.info.titulo}}<sup>ec</sup></a></h1>
         <nav class="rk-navigation">
             <ul class="rk-menu">
-                <li routerLinkActive="active" class="rk-menu__item"><a [routerLink]="['/inicio']" class="rk-menu__link">Home</a>
+                <li routerLinkActive="active" class="rk-menu__item"><a [routerLink]="['/inicio']" class="rk-menu__link">Inicio</a>
                 </li>
                 <li routerLinkActive="active" class=" rk-menu__item"><a [routerLink]="['/portafolio']" class="rk-menu__link">Portfolio</a>
                 </li>
