--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -27,7 +27,7 @@
 
 
     <div *ngIf="!productoService.cargando" class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
-        <a *ngFor="let producto of productoService.productos" href="assets/productos/{{producto.url}}.jpg" class="rk-item ae-masonry__item"><img src="assets/productos/{{producto.url}}.jpg" alt="">
+        <a *ngFor="let producto of productoService.productos" [routerLink]="['/item',producto.cod]" routerLinkActive="router-link-active" class="rk-item ae-masonry__item"><img src="assets/productos/{{producto.url}}.jpg" alt="">
             <div class="item-meta">
                 <h2>{{producto.titulo}}</h2>
                 <p>{{producto.categoria}}</p>
